# azure-sandbox

./: .gitignore  README.md  docker-compose.yml  requirements.txt
.claude/: settings.local.json
.github/workflows/: main_api-sandbox.yml  main_app-azuresandbox-api.yml  main_app-azuresandbox-web.yml  main_app-azuresandbox.yml  main_web-sandbox.yml
api/: Dockerfile  main.py
app/: .dockerignore  main.py  pyproject.toml
terraform/: .gitignore  appservice.tf  main.tf  network_hub.tf  network_peering.tf  network_spoke.tf  outputs.tf  private_endpoint.tf  terraform.tfvars  variables.tf
web/: .gitignore  Dockerfile  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
