[project]
name = "azure-sandbox-api"
version = "0.1.0"
description = "Azure Sandbox FastAPI Application"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.4",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
